admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: guardian.default.svc
webhooks:
- name: guardian.default.svc
  rules:
  - apiGroups:
    - "*"
    apiVersions:
    - "*"
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
    - deployments
    - services
    scope: "*"
  timeoutSeconds: 5
  failurePolicy: Fail
  clientConfig:
    service:
      namespace: default
      name: guardian
      path: /api/validate
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMxRENDQWJ5Z0F3SUJBZ0lSQUk5SjRMTmswOU9qdTNmcmdmTGFleGN3RFFZSktvWklodmNOQVFFTEJRQXcKRXpFUk1BOEdBMVVFQ2hNSWJuZGhibVJsY21Fd0hoY05NVGt3TlRJd01ETXhOVEF3V2hjTk1qSXdOVEEwTURNeApOVEF3V2pBVE1SRXdEd1lEVlFRS0V3aHVkMkZ1WkdWeVlUQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQCkFEQ0NBUW9DZ2dFQkFML0N3NEo4R1lrck10WG1BUkdIa2tmb1VDMmZXQWtCOXUzMGlkd3JiNE9mdHhJSDZ6cU8KTE9xU2hTVjQ1dzhHbHpMMENKUDRBdks4U0MvMnBWSWpZdXMzOG1wSkxWMVUwMWtud1E4bDNuNlBNUk4vOWQ3agpyenV5TzcreTdpeW [...]
